fusion--dev/src/objects/Order_Line__c.object
<CustomObject>
    <fields>
        <fullName>DiscountPrice__c</fullName>
        <label>DiscountPrice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ext_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Change_Date__c</fullName>
        <label>Last Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Change_Time__c</fullName>
        <label>Last Change Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Line_Comment__c</fullName>
        <label>Line Comment</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <label>Line Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Status__c</fullName>
        <label>Line Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Need_By_Date__c</fullName>
        <label>Need By Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Need_By__c</fullName>
        <label>Need By Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Details__c</fullName>
        <label>Order Details</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipName>Order_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order_Line__c</fullName>
        <label>Order Line</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Quantity__c</fullName>
        <label>Order Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <label>Part Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Date__c</fullName>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Category__c</fullName>
        <label>Sales Category</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_By__c</fullName>
        <label>Ship By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Shipped__c</fullName>
        <label>Total Shipped</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC__c</fullName>
        <label>UPC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Ext Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Order Line</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Part_Number__c</columns>
        <columns>Product_Description__c</columns>
        <columns>Order_Quantity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:60</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Order_Lines_Invoiced</fullName>
        <columns>NAME</columns>
        <columns>Part_Number__c</columns>
        <columns>Product_Description__c</columns>
        <columns>Order_Quantity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Line_Status__c</field>
            <operation>equals</operation>
            <value>Completed,Completely processed,Completely Processed</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:60</value>
        </filters>
        <label>Order Lines – Invoiced</label>
    </listViews>
    <listViews>
        <fullName>Order_Lines_Open</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Part_Number__c</columns>
        <columns>Product_Description__c</columns>
        <columns>Order_Quantity__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:60</value>
        </filters>
        <filters>
            <field>Line_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Order Lines – Open</label>
    </listViews>
    <listViews>
        <fullName>Order_Lines_Shipped</fullName>
        <columns>NAME</columns>
        <columns>Part_Number__c</columns>
        <columns>Product_Description__c</columns>
        <columns>Order_Quantity__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Line_Status__c</field>
            <operation>equals</operation>
            <value>Completed,Completely processed,Completely Processed</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:60</value>
        </filters>
        <label>Order Lines – Shipped</label>
    </listViews>
    <listViews>
        <fullName>Order_Lines_Shipped_Partial</fullName>
        <columns>NAME</columns>
        <columns>Part_Number__c</columns>
        <columns>Product_Description__c</columns>
        <columns>Order_Quantity__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Line_Status__c</field>
            <operation>equals</operation>
            <value>Being processed,Being Processed</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:60</value>
        </filters>
        <label>Order Lines - Shipped Partial</label>
    </listViews>
    <listViews>
        <fullName>Orders_Recently_Viewed</fullName>
        <columns>NAME</columns>
        <columns>Part_Number__c</columns>
        <columns>Product_Description__c</columns>
        <columns>Order_Quantity__c</columns>
        <filterScope>Everything</filterScope>
        <label>Orders - Recently Viewed</label>
    </listViews>
    <nameField>
        <label>Order Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>